<resources>
    <string name="app_name">KOTLIN</string>
    <string name="title_activity_java">JavaActivity</string>
    <string name="chapter_one_activity">Chapter 01 Activity</string>
    <string name="chapter_two_activity">Chapter 02 UI</string>
    <string name="chapter_three_activity">Chapter 03 Fragment</string>
    <string name="chapter_4_activity">Chapter 04 Broadcast</string>
    <string name="chapter_5_activity">Chapter 05 Persistent</string>
    <string name="chapter_6_activity">Chapter 06 ContentProvider</string>
    <string name="chapter_7_activity">Chapter 07 MultiMedia/Notification</string>
    <string name="chapter_8_activity">Chapter 08 NetWork</string>
    <string name="chapter_9_activity">Chapter 09 Service</string>
    <string name="chapter_10_activity">Chapter 10 LBS</string>
    <string name="chapter_11_activity">Chapter 11 Material Design</string>
    <string name="chapter_13_activity">Chapter 13 Weather App</string>


    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
