<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--
    // 2019-07-17 NOTE:
    first you need go to  setting  find Editor - code style - xml - scheme - Default ,
    or  you cant formater xml like  in java project
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/chapter_one"
            style="@style/HomeTextViewStyle"
            android:text="@string/chapter_one_activity" />

        <TextView
            android:id="@+id/chapter_two"
            style="@style/HomeTextViewStyle"
            android:text="@string/chapter_two_activity" />

        <TextView
            android:id="@+id/chapter_three"
            style="@style/HomeTextViewStyle"
            android:text="@string/chapter_three_activity" />

        <TextView
            android:id="@+id/chapter_4"
            style="@style/HomeTextViewStyle"
            android:text="@string/chapter_4_activity" />

        <TextView
            android:id="@+id/chapter_5"
            style="@style/HomeTextViewStyle"
            android:text="@string/chapter_5_activity" />

        <TextView
            android:id="@+id/chapter_6"
            style="@style/HomeTextViewStyle"
            android:text="@string/chapter_6_activity" />

        <TextView
            android:id="@+id/chapter_7"
            style="@style/HomeTextViewStyle"
            android:text="@string/chapter_7_activity" />

        <TextView
            android:id="@+id/chapter_8"
            style="@style/HomeTextViewStyle"
            android:text="@string/chapter_8_activity" />

        <TextView
            android:id="@+id/chapter_9"
            style="@style/HomeTextViewStyle"
            android:text="@string/chapter_9_activity" />

        <TextView
            android:id="@+id/chapter_10"
            style="@style/HomeTextViewStyle"
            android:text="@string/chapter_10_activity" />

        <TextView
            android:id="@+id/chapter_11"
            style="@style/HomeTextViewStyle"
            android:text="@string/chapter_11_activity" />

        <!--        <TextView-->
        <!--            android:id="@+id/chapter_11"-->
        <!--            style="@style/HomeTextViewStyle"-->
        <!--            android:text="@string/chapter_11_activity" />-->


    </LinearLayout>
</ScrollView>
